<resources>
    <string name="app_name">EveryDownload</string>
    <string name="download">新建任务</string>
    <string name="delete">删除</string>
    <string name="delete_file">删除文件</string>
    <string name="delete_downloaded_file">同时删除已下载文件</string>
    <string name="delete_download_assure">是否要删除下载？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="file">好的</string>
    <string name="max_running_tasks">最大任务数</string>
    <string name="no_activity_to_open_file">没有能打开文件的程序</string>
    <string name="download_file_not_exists">文件已被移动或删除！</string>
    <string name="directory_not_exists">文件夹不存在！</string>
    <string name="button">button</string>
    <string name="start_download">开始下载</string>
    <string name="illegal_url">url不合法</string>
    <string name="filename_optional">文件名（可选）</string>
    <string name="link">下载链接</string>
    <string name="choose">选择</string>
    <string name="save_location">保存位置</string>
    <string name="need_rw_retry">需要读写文件权限才能进行操作，是否重试？</string>
    <string name="need_rw_go_setting">需要读写文件权限才能进行操作，请前往设置允许。</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="root_dir">/</string>
    <string name="icon">icon</string>
    <string name="empty">空空如也～</string>
    <string name="choose_file">文件选择</string>
    <string name="back">返回</string>
    <string name="choose_dir">选择文件夹</string>
    <string name="explore_file">浏览文件</string>
    <string name="mkdir">新建</string>
    <string name="input_new_dir_name">输入文件夹名</string>
    <string name="mk_dir">创建新文件夹</string>
    <string name="create">创建</string>
    <string name="create_success">创建成功</string>
    <string name="dir_not_exist">文件夹不存在</string>
    <string name="path_not_dir">路径不是文件夹</string>
    <string name="create_new_download_task">新建下载任务</string>
    <string name="error"><![CDATA[出错了~(>_<)~]]></string>
    <string name="loading">加载中…</string>
    <string name="advice_to_to_download">去下载点啥吧～</string>
    <string name="empty_downloading_list">没有下载任务～</string>
    <string name="title_finished">已完成</string>
    <string name="title_downloading">正在下载</string>
    <string name="preference">偏好设置</string>
    <string name="no_speed_limit">不限速</string>
    <string name="exit">退出</string>
    <string name="continue_downloading">退出后继续下载</string>
    <string name="exit_prompt">下载任务未完成，是否退出？</string>
    <string name="copy_success">已复制</string>
    <string name="copy_failed">复制失败</string>
    <string name="open_download_file">无法打开文件</string>
    <string name="share_to">分享至</string>
    <string name="share_failed">分享失败</string>
    <string name="finish">完成</string>
    <string name="error_show_content">暂时无法显示内容</string>
    <string name="filename">文件名</string>
    <string name="path">保存路径</string>
    <string name="filne_length">文件大小</string>
    <string name="create_time">创建时间</string>
    <string name="download_content">下载详情</string>
    <string name="title_url">下载地址</string>
    <string name="about_name_and_author">EveryDownload\nBy SirLYC</string>
    <string name="about_project">关于项目</string>
    <string name="about">关于</string>
    <string name="version">版本信息</string>
    <string name="licence">开源许可</string>
    <string name="about_project_content">EveryDownload是一款简单、小巧的下载器，支持多任务、断点续传、多种配置。下载引擎是我的另一个项目YC-Downloader。</string>
    <string name="version_content_format">当前版本: %s\</string>
    <string name="cannot_open_email">无法打开邮件App</string>
    <string name="relate_link">相关链接</string>
    <string name="app_project_link">APP项目传送门</string>
    <string name="apk_download_link">APK下载传送门</string>
    <string name="downloader_project_link">下载引擎项目传送门</string>
    <string name="share">分享</string>
    <string name="click_update">点击检查更新</string>
    <string name="my_blog">我的博客</string>
    <string name="update">更新</string>
    <string name="not_update_now">暂不更新</string>
</resources>
